--- a/pe/021.tex
+++ b/pe/021.tex
@@ -122,7 +122,7 @@ Get aliqout sums for all the numbers:
         \EndFor
     \end{algorithmic}
 \end{algorithm}
-
+\newpage
 Accumulate all the amicable numbers
 \begin{algorithm}
     \caption{Amicable sum} \label{alg:amicable}
